<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasDatosUsuario">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/Verde"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMasDatosUsuario"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:layout_x="14dp"
        android:layout_y="115dp"
        android:text="@string/MasDatosUsuarioTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloMasDatosContacto" />

    <TextView
        android:id="@+id/txtTituloMasDatosContacto"
        android:layout_width="265dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:layout_x="22dp"
        android:layout_y="77dp"
        android:text="@string/AgregarContactoTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar2" />

    <RadioGroup
        android:id="@+id/RadioGroupNivelEstudios"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="190dp"
        app:layout_constraintBottom_toTopOf="@+id/txtIntereses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMasDatosUsuario">

        <RadioButton
            android:id="@+id/RBPrimarioIncompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrimarioIncompleto" />

        <RadioButton
            android:id="@+id/RB_PrimarioCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrimarioCompleto" />

        <RadioButton
            android:id="@+id/RB_SecundarioIncompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SecundarioIncompleto" />

        <RadioButton
            android:id="@+id/RB_SecundarioCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SecundarioCompleto" />

        <RadioButton
            android:id="@+id/RB_Otros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Otros" />


    </RadioGroup>

    <TextView
        android:id="@+id/txtNivelEstudiosAlcanzados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_x="13dp"
        android:layout_y="166dp"
        android:text="@string/NivelEstudiosAlcanzados"
        app:layout_constraintBottom_toTopOf="@+id/RadioGroupNivelEstudios"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtIntereses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:layout_x="23dp"
        android:layout_y="440dp"
        android:text="@string/Intereses"
        app:layout_constraintBottom_toTopOf="@+id/Deporte"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/Deporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="180dp"
        android:layout_x="17dp"
        android:layout_y="468dp"
        android:text="@string/Deporte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/Musica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="180dp"
        android:layout_x="143dp"
        android:layout_y="472dp"
        android:text="@string/Musica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Deporte" />

    <CheckBox
        android:id="@+id/Arte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_x="17dp"
        android:layout_y="521dp"
        android:text="@string/Arte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deporte"
        app:layout_constraintVertical_bias="0.151" />

    <CheckBox
        android:id="@+id/Tecnologia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_x="142dp"
        android:layout_y="521dp"
        android:text="@string/Tecnologia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Musica"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/txtDeseaREcibirInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_x="20dp"
        android:layout_y="574dp"
        android:text="@string/DeseaRecibirInformacion"
        app:layout_constraintBottom_toTopOf="@+id/BtnGuardarContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDeseaRecibirInfo"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_x="234dp"
        android:layout_y="571dp"
        android:showText="true"
        android:textOff="@string/No"
        android:textOn="@string/Si"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDeseaREcibirInfo" />

    <Button
        android:id="@+id/BtnGuardarContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_x="180dp"
        android:layout_y="630dp"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_view_toolbar1"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_x="23dp"
        android:layout_y="25dp"
        android:text="@string/txt_view_tooolbar1"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar2"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>