<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarContacto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <TextView
            android:id="@+id/txt_view_toolbar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_view_tooolbar1" />

        <Spinner
            android:id="@+id/spinner_main_activity_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btn_three_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/three_dots_button"
            android:src="@drawable/ic_three_dots" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/txtViewAgregarContactoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AgregarContactoTitulo" />

    <TextView
        android:id="@+id/txt_view_AgregarContacto_subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AgregarContactoSubtitulo" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nombre" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Nombre"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtViewApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Apellido" />

            <EditText
                android:id="@+id/editTextApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Apellido"
                android:inputType="text" />


            <TextView
                android:id="@+id/txtViewTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telefono"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Telefono"
                android:inputType="number"
                android:layout_weight="2"/>

                <Spinner
                    android:id="@+id/spinnerTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="6" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
